<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CustName"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/account_number"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AccNum"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_no"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/email_id"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bank_account_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_id"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/mobile_number"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ifsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bank_account_no"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/ifsc_code"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ifsc_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ifsc"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/current_balance"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/rupee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AccBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rupeeslash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol_rs"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_balance"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#0F5677"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/transfer_money"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>